fix wrong position reaction css

--- a/src/assets/css/components/_reaction.scss
+++ b/src/assets/css/components/_reaction.scss
@@ -16,6 +16,8 @@
 
 .current-reactions-expressed {
     display: inline-block;
+    position: relative;
+    left: 8rem;
     background-color: $mainLightColor;
     box-shadow: 0 0 5px black;
     width: auto;
